// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`babel plugin in bundleMode bundle mode flag toggle does not flip the flag in unrelated files 1`] = `"globalThis._WORKLETS_BUNDLE_MODE_ENABLED = false;"`;

exports[`babel plugin in bundleMode nested worklets extracts each nested worklet into its own module 1`] = `"const foo = require("metro:inline;base64,<module 1>").default;"`;

exports[`babel plugin in bundleMode nested worklets extracts each nested worklet into its own module 2`] = `
""worklet-module";

const testJs2 = function () {
  "use no memo";

  const bar = require("metro:inline;base64,<module 1>").default;
  return bar();
};
testJs2.__workletHash = 1;
testJs2.__pluginVersion = "x.y.z";
testJs2.__moduleId = module.id;
export default testJs2;"
`;

exports[`babel plugin in bundleMode source replacement does not shadow forwarded imports with the closure-free arrow worklet binding 1`] = `
""worklet-module";

import { first as testJs1 } from "some-library";
import { second as _testJs1 } from "some-library";
const __testJs1 = function () {
  "use no memo";

  return [testJs1(), _testJs1()];
};
__testJs1.__workletHash = 1;
__testJs1.__pluginVersion = "x.y.z";
__testJs1.__moduleId = module.id;
export default __testJs1;"
`;

exports[`babel plugin in bundleMode source replacement does not shadow forwarded imports with the closure-free method worklet binding 1`] = `
""worklet-module";

import { first as read } from "some-library";
import { second as _read } from "some-library";
const __read = function () {
  "use no memo";

  return [read(), _read()];
};
__read.__workletHash = 1;
__read.__pluginVersion = "x.y.z";
__read.__moduleId = module.id;
export default __read;"
`;

exports[`babel plugin in bundleMode source replacement packs captures in the same order at the call site and in the factory 1`] = `
"function make(z, missing, a) {
  return require("metro:inline;base64,<module 1>").default([z, missing, a]);
}
module.exports = make;"
`;

exports[`babel plugin in bundleMode source replacement packs captures in the same order at the call site and in the factory 2`] = `
""worklet-module";

export default (function testJs1Factory([z, missing, a]) {
  const testJs1 = function (suffix) {
    "use no memo";

    return [z.value, missing, a, suffix];
  };
  testJs1.__closure = [z, missing, a];
  testJs1.__workletHash = 1;
  testJs1.__pluginVersion = "x.y.z";
  testJs1.__moduleId = module.id;
  return testJs1;
});"
`;

exports[`babel plugin in bundleMode source replacement replaces inline factory with a require of the generated module 1`] = `"const foo = require("metro:inline;base64,<module 1>").default;"`;

exports[`babel plugin in bundleMode source replacement still captures closure even with "no-worklet-closure" directive 1`] = `
"const x = 1;
const foo = require("metro:inline;base64,<module 1>").default([x]);"
`;

exports[`babel plugin in bundleMode source replacement still captures closure even with "no-worklet-closure" directive 2`] = `
""worklet-module";

export default (function foo_testJs1Factory([x]) {
  const foo = function () {
    "use no memo";

    return x;
  };
  foo.__closure = [x];
  foo.__workletHash = 1;
  foo.__pluginVersion = "x.y.z";
  foo.__moduleId = module.id;
  return foo;
});"
`;

exports[`babel plugin in bundleMode worklet module generation captures locally defined JSX components in the closure 1`] = `
"function LocalComponent() {
  return null;
}
const renderView = require("metro:inline;base64,<module 1>").default([LocalComponent]);"
`;

exports[`babel plugin in bundleMode worklet module generation closure-free generated module exports the worklet directly 1`] = `
""worklet-module";

const foo = function () {
  "use no memo";

  var x = 1;
  return x;
};
foo.__workletHash = 1;
foo.__pluginVersion = "x.y.z";
foo.__moduleId = module.id;
export default foo;"
`;

exports[`babel plugin in bundleMode worklet module generation does not emit init data 1`] = `"const foo = require("metro:inline;base64,<module 1>").default;"`;

exports[`babel plugin in bundleMode worklet module generation does not emit init data 2`] = `
""worklet-module";

const foo = function () {
  "use no memo";

  var x = 1;
};
foo.__workletHash = 1;
foo.__pluginVersion = "x.y.z";
foo.__moduleId = module.id;
export default foo;"
`;

exports[`babel plugin in bundleMode worklet module generation does not emit stack-trace machinery 1`] = `
""worklet-module";

const foo = function () {
  "use no memo";

  var x = 1;
};
foo.__workletHash = 1;
foo.__pluginVersion = "x.y.z";
foo.__moduleId = module.id;
export default foo;"
`;

exports[`babel plugin in bundleMode worklet module generation forwards closure variables from source to factory 1`] = `
"const a = 1;
const b = 2;
const foo = require("metro:inline;base64,<module 1>").default([a, b]);"
`;

exports[`babel plugin in bundleMode worklet module generation forwards closure variables from source to factory 2`] = `
""worklet-module";

export default (function foo_testJs1Factory([a, b]) {
  const foo = function () {
    "use no memo";

    return a + b;
  };
  foo.__closure = [a, b];
  foo.__workletHash = 1;
  foo.__pluginVersion = "x.y.z";
  foo.__moduleId = module.id;
  return foo;
});"
`;

exports[`babel plugin in bundleMode worklet module generation leaves relative requires inside the worklet body as written in a non-workletizable file 1`] = `
""worklet-module";

const baz = function () {
  "use no memo";

  const helper = require("./helper");
  return helper.foo();
};
baz.__workletHash = 1;
baz.__pluginVersion = "x.y.z";
baz.__moduleId = module.id;
export default baz;"
`;

exports[`babel plugin in bundleMode worklet module generation leaves relative requires inside the worklet body as written in a workletizable package 1`] = `
""worklet-module";

const baz = function () {
  "use no memo";

  const helper = require("./helper");
  return helper.foo();
};
baz.__workletHash = 1;
baz.__pluginVersion = "x.y.z";
baz.__moduleId = module.id;
export default baz;"
`;

exports[`babel plugin in bundleMode worklet module generation preserves workletizable library imports in the generated module 1`] = `
"import { foo } from 'some-library';
const bar = require("metro:inline;base64,<module 1>").default;"
`;

exports[`babel plugin in bundleMode worklet module generation preserves workletizable library imports in the generated module 2`] = `
""worklet-module";

import { foo } from "some-library";
const bar = function () {
  "use no memo";

  return foo();
};
bar.__workletHash = 1;
bar.__pluginVersion = "x.y.z";
bar.__moduleId = module.id;
export default bar;"
`;

exports[`babel plugin in bundleMode worklet module generation requires the generated module by its inline specifier 1`] = `"const foo = require("metro:inline;base64,<module 1>").default;"`;
